--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,8 @@
 <html  lang="ru">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <script type="module" src="./index.ts"></script>
+    <meta http-equiv="Content-Security-Policy" content="connect-src https://ya-praktikum.tech/ wss://ya-praktikum.tech/ ws://localhost:*/; default-src 'self' https://ya-praktikum.tech/ 'unsafe-eval'; style-src https://fonts.googleapis.com 'self'; font-src https://fonts.googleapis.com https://fonts.gstatic.com 'self'" >
+    <script type="module" src="./index.ts"></script>    
   </head>
   <body>
     <main id="root"></main>
